fix: label text spilling out of the field (#791)
On small screens, longer text labels spilling out of the input field, added
text overflow ellipses.

VAN-672

--- a/src/Form/_Form.scss
+++ b/src/Form/_Form.scss
@@ -156,6 +156,10 @@ $select-icon-padding: .5625rem !default;
     // a color. Adding an alpha channel smooths it out.
     background-color: rgba($input-bg, 0.01);
     white-space: nowrap;
+    max-width: 75vw;
+    display: block;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 
   .has-leading-element & {
